--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,14 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Keeymon.github.io/Simple_Storage_dApp/",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
-    "web3": "1.2.2"
+    "web3": "1.2.2",
+    "gh-pages": "3.2.3"
   },
   "engines": {
     "node": "12.x"
@@ -15,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
